--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,11 @@
     <color name="mustard">#FED766</color>
     <color name="gray">#696773</color>
     <color name="anti_flash_white">#EFF1F3</color>
+    <!-- Color Picker !-->
+    <color name="picker_red">#F44336</color>
+    <color name="picker_green">#4CAF50</color>
+    <color name="picker_blue">#2196F3</color>
+    <color name="picker_black">#2E2E2E</color>
+    <color name="picker_yellow">#FFEB3B</color>
+    <color name="picker_orange">#FF5722</color>
 </resources>
