--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,8 +3,10 @@
     <style name="Base.Theme.ShoppingList" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/blue_light</item>
-        
-        <item name="android:windowFullscreen">true</item>
+        <item name="colorPrimaryVariant">@color/blue_dark</item>
+        <item name="android:windowFullscreen">false</item>
+
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant </item>
     </style>
 
     <style name="Theme.ShoppingList" parent="Base.Theme.ShoppingList" />
