--- a/app/src/main/res/layout/new_list_dialog.xml
+++ b/app/src/main/res/layout/new_list_dialog.xml
@@ -19,7 +19,7 @@
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
