--- a/app/src/main/res/layout/edit_list_item_dialog.xml
+++ b/app/src/main/res/layout/edit_list_item_dialog.xml
@@ -34,6 +34,7 @@
                 android:id="@+id/edName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLength="20"
                 android:ems="10"
                 android:hint="@string/name"
                 android:inputType="text" />
