--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,4 +22,27 @@
         <item>hh:mm:ss — YYYY/MM/DD</item>
     </string-array>
 
+    <string-array name="choose_theme_array" >
+        <item>Blue theme</item>
+        <item>Green theme</item>
+    </string-array>
+    <string-array name="choose_theme_values" >
+        <item>blue</item>
+        <item>green</item>
+    </string-array>
+
+    <string-array name="text_size_array" >
+        <item>12 sp</item>
+        <item>14 sp</item>
+        <item>16 sp</item>
+        <item>18 sp</item>
+        <item>20 sp</item>
+    </string-array>
+    <string-array name="text_size_values" >
+        <item>12</item>
+        <item>14</item>
+        <item>16</item>
+        <item>18</item>
+        <item>20</item>
+    </string-array>
 </resources>
