--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -12,7 +12,7 @@
             android:icon="@drawable/ic_style"
             android:title="@string/choose_note_style" />
         <ListPreference
-            android:defaultValue="1"
+            android:defaultValue="hh:mm:ss — DD.MM.YYYY"
             app:useSimpleSummaryProvider="true"
             android:entries="@array/time_format_array"
             android:entryValues="@array/time_format_values"
@@ -41,7 +41,7 @@
     <PreferenceCategory android:title="@string/note_text_settings">
 
         <ListPreference
-            android:defaultValue="1"
+            android:defaultValue="16"
             app:useSimpleSummaryProvider="true"
             android:entries="@array/text_size_array"
             android:entryValues="@array/text_size_values"
@@ -49,7 +49,7 @@
             android:icon="@drawable/ic_text_size"
             android:title="@string/choose_text_size" />
         <ListPreference
-            android:defaultValue="1"
+            android:defaultValue="14"
             app:useSimpleSummaryProvider="true"
             android:entries="@array/text_size_array"
             android:entryValues="@array/text_size_values"
