--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -4,7 +4,7 @@
 
     <PreferenceCategory android:title="@string/general">
         <ListPreference
-            android:defaultValue="1"
+            android:defaultValue="Linear"
             app:useSimpleSummaryProvider="true"
             android:entries="@array/note_style_array"
             android:entryValues="@array/note_style_values"
