Lesson55 Creating logic for choosing application style

--- a/app/src/main/res/layout/edit_action_layout.xml
+++ b/app/src/main/res/layout/edit_action_layout.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/anti_flash_white"
+        android:theme="@style/Base.Theme.EditBlue"
         android:hint="@string/new_item"
         android:inputType="text" />
 </LinearLayout>
