--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -28,7 +28,7 @@
 
     <PreferenceCategory android:title="@string/theme_settings">
         <ListPreference
-            android:defaultValue="1"
+            android:defaultValue="blue"
             app:useSimpleSummaryProvider="true"
             android:entries="@array/choose_theme_array"
             android:entryValues="@array/choose_theme_values"
