--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,30 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.ShoppingList" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+<resources>
+    <!-- Blue application theme. -->
+    <style name="Base.Theme.ShoppingListBlue" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/blue_light</item>
         <item name="colorPrimaryVariant">@color/blue_dark</item>
         <item name="android:windowFullscreen">false</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="colorSecondary">@color/blue_light</item>
 
     </style>
 
-    <style name="Theme.ShoppingList" parent="Base.Theme.ShoppingList" />
+    <!-- Green application theme. -->
+    <style name="Base.Theme.ShoppingListGreen" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/green_light</item>
+        <item name="colorPrimaryVariant">@color/green_dark</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:statusBarColor">@color/green_dark</item>
+        <item name="colorSecondary">@color/green_light</item>
+
+    </style>
+
+    <!-- Edit theme. -->
+    <style name="Base.Theme.EditBlue" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="colorSecondary">@color/white</item>
+
+    </style>
 </resources>
